# pygcs

./: .gitignore  EVENT_BRIDGE_README.md  integration_example.py  protocol.md  pyproject.toml  security_config.py  test.py  test_print_interceptor.py
examples/: api_example.py  distributed_api_example.py  security_example.py
macros/: toolchange.g
notebooks/: scratch.ipynb
src/: controller_server.py  event_bridge_client.py  event_bridge_server.py  serial_comm.py
src/pygcs/: __init__.py  api_server.py  broadcast.py  controller.py  event_bridge_client.py  event_bridge_server.py  event_bus.py  event_processor.py  gcode_prcessing.py  grbl_serial_main.py  listeners.py  main.py  main_client.py  networking.py  pretty_terminal.py  print_interceptor.py  remote_objects.py  serial_comm.py  signals.py  simple_terminal.py
src/pygcs/controller/: __init__.py  controller.py  gcode_prcessing.py  program.py  state.py  tracking.py
src/pygcs/event_bus/: __init__.py  echo.py  event.py  handler.py  host.py  runtime.py
src/pygcs/networking/: __init__.py  exceptions.py  io.py  message.py  processor.py  server_client.py
test/: client_test.py  controller_client.py  controller_server.py  controller_test.py  grbl_client_test.py  grbl_server_test.py  remote_object_test.py  server_test.py
